compiler-simulation/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<='", "'>='", "'<'", "'>'", "'::'", "'!'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "INTEGER_LIT", "FLOAT_LIT", "BOOLEAN_LIT", 
                      "STRING_LIT", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "IDENTIFIER", 
                      "ADD", "SUBTRACT", "MULTIPLY", "DIVIDE", "MODULO", 
                      "AND", "OR", "EQUAL", "NOT_EQUAL", "SMALL_EQUAL", 
                      "LARGE_EQUAL", "SMALL", "LARGE", "CONCATENATE", "NOT", 
                      "LB", "RB", "LSB", "RSB", "LCB", "RCB", "SEMI", "COMMA", 
                      "ASSIGN", "COLON", "DOT", "WHITESPACE", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_program_body = 1
    RULE_variable_declaration = 2
    RULE_variable_declaration_without_semi = 3
    RULE_id_list = 4
    RULE_id_list_body = 5
    RULE_function_declaration = 6
    RULE_parameter_one = 7
    RULE_nullable_parameter_list = 8
    RULE_parameter_list = 9
    RULE_parameter_list_body = 10
    RULE_assign_statement = 11
    RULE_if_statement = 12
    RULE_for_statement = 13
    RULE_while_statement = 14
    RULE_do_while_statement = 15
    RULE_break_statement = 16
    RULE_continue_statement = 17
    RULE_return_statement = 18
    RULE_call_statement = 19
    RULE_block_statement = 20
    RULE_block_statement_body = 21
    RULE_statement = 22
    RULE_expression = 23
    RULE_relational_expression = 24
    RULE_logical_expression = 25
    RULE_additive_expression = 26
    RULE_multiplicative_expression = 27
    RULE_not_expression = 28
    RULE_sign_expression = 29
    RULE_index_expression = 30
    RULE_operand = 31
    RULE_nullable_expression_list = 32
    RULE_expression_list = 33
    RULE_expression_list_body = 34
    RULE_index_operation = 35
    RULE_function_call = 36
    RULE_primitive_lit = 37
    RULE_arraylit = 38
    RULE_array_type = 39
    RULE_intlit_list = 40
    RULE_intlit_list_body = 41
    RULE_variable_type_without_void = 42
    RULE_variable_type = 43

    ruleNames =  [ "program", "program_body", "variable_declaration", "variable_declaration_without_semi", 
                   "id_list", "id_list_body", "function_declaration", "parameter_one", 
                   "nullable_parameter_list", "parameter_list", "parameter_list_body", 
                   "assign_statement", "if_statement", "for_statement", 
                   "while_statement", "do_while_statement", "break_statement", 
                   "continue_statement", "return_statement", "call_statement", 
                   "block_statement", "block_statement_body", "statement", 
                   "expression", "relational_expression", "logical_expression", 
                   "additive_expression", "multiplicative_expression", "not_expression", 
                   "sign_expression", "index_expression", "operand", "nullable_expression_list", 
                   "expression_list", "expression_list_body", "index_operation", 
                   "function_call", "primitive_lit", "arraylit", "array_type", 
                   "intlit_list", "intlit_list_body", "variable_type_without_void", 
                   "variable_type" ]

    EOF = Token.EOF
    INTEGER_LIT=1
    FLOAT_LIT=2
    BOOLEAN_LIT=3
    STRING_LIT=4
    AUTO=5
    BREAK=6
    BOOLEAN=7
    DO=8
    ELSE=9
    FALSE=10
    FLOAT=11
    FOR=12
    FUNCTION=13
    IF=14
    INTEGER=15
    RETURN=16
    STRING=17
    TRUE=18
    WHILE=19
    VOID=20
    OUT=21
    CONTINUE=22
    OF=23
    INHERIT=24
    ARRAY=25
    IDENTIFIER=26
    ADD=27
    SUBTRACT=28
    MULTIPLY=29
    DIVIDE=30
    MODULO=31
    AND=32
    OR=33
    EQUAL=34
    NOT_EQUAL=35
    SMALL_EQUAL=36
    LARGE_EQUAL=37
    SMALL=38
    LARGE=39
    CONCATENATE=40
    NOT=41
    LB=42
    RB=43
    LSB=44
    RSB=45
    LCB=46
    RCB=47
    SEMI=48
    COMMA=49
    ASSIGN=50
    COLON=51
    DOT=52
    WHITESPACE=53
    LINE_COMMENT=54
    BLOCK_COMMENT=55
    ERROR_CHAR=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_body(self):
            return self.getTypedRuleContext(MT22Parser.Program_bodyContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def variable_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Variable_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Function_declarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 88
                self.variable_declaration()
                pass

            elif la_ == 2:
                self.state = 89
                self.function_declaration()
                pass


            self.state = 92
            self.program_body()
            self.state = 93
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_body(self):
            return self.getTypedRuleContext(MT22Parser.Program_bodyContext,0)


        def variable_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Variable_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Function_declarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_body" ):
                return visitor.visitProgram_body(self)
            else:
                return visitor.visitChildren(self)




    def program_body(self):

        localctx = MT22Parser.Program_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_body)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self.variable_declaration()
                    pass

                elif la_ == 2:
                    self.state = 96
                    self.function_declaration()
                    pass


                self.state = 99
                self.program_body()
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def variable_type_without_void(self):
            return self.getTypedRuleContext(MT22Parser.Variable_type_without_voidContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def variable_declaration_without_semi(self):
            return self.getTypedRuleContext(MT22Parser.Variable_declaration_without_semiContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variable_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = MT22Parser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_declaration)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.id_list()
                self.state = 105
                self.match(MT22Parser.COLON)
                self.state = 106
                self.variable_type_without_void()
                self.state = 107
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.variable_declaration_without_semi()
                self.state = 110
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declaration_without_semiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def variable_type_without_void(self):
            return self.getTypedRuleContext(MT22Parser.Variable_type_without_voidContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def variable_declaration_without_semi(self):
            return self.getTypedRuleContext(MT22Parser.Variable_declaration_without_semiContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variable_declaration_without_semi

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration_without_semi" ):
                return visitor.visitVariable_declaration_without_semi(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration_without_semi(self):

        localctx = MT22Parser.Variable_declaration_without_semiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_declaration_without_semi)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(MT22Parser.IDENTIFIER)
                self.state = 115
                self.match(MT22Parser.COLON)
                self.state = 116
                self.variable_type_without_void()
                self.state = 117
                self.match(MT22Parser.ASSIGN)
                self.state = 118
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(MT22Parser.IDENTIFIER)
                self.state = 121
                self.match(MT22Parser.COMMA)
                self.state = 122
                self.variable_declaration_without_semi()
                self.state = 123
                self.match(MT22Parser.COMMA)
                self.state = 124
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def id_list_body(self):
            return self.getTypedRuleContext(MT22Parser.Id_list_bodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = MT22Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_id_list)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(MT22Parser.IDENTIFIER)
                self.state = 129
                self.id_list_body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def id_list_body(self):
            return self.getTypedRuleContext(MT22Parser.Id_list_bodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list_body" ):
                return visitor.visitId_list_body(self)
            else:
                return visitor.visitChildren(self)




    def id_list_body(self):

        localctx = MT22Parser.Id_list_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list_body)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(MT22Parser.COMMA)
                self.state = 134
                self.match(MT22Parser.IDENTIFIER)
                self.state = 135
                self.id_list_body()
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFIER)
            else:
                return self.getToken(MT22Parser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def variable_type(self):
            return self.getTypedRuleContext(MT22Parser.Variable_typeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def nullable_parameter_list(self):
            return self.getTypedRuleContext(MT22Parser.Nullable_parameter_listContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def block_statement(self):
            return self.getTypedRuleContext(MT22Parser.Block_statementContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_function_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = MT22Parser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MT22Parser.IDENTIFIER)
            self.state = 140
            self.match(MT22Parser.COLON)
            self.state = 141
            self.match(MT22Parser.FUNCTION)
            self.state = 142
            self.variable_type()
            self.state = 143
            self.match(MT22Parser.LB)
            self.state = 144
            self.nullable_parameter_list()
            self.state = 145
            self.match(MT22Parser.RB)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.state = 146
                self.match(MT22Parser.INHERIT)
                self.state = 147
                self.match(MT22Parser.IDENTIFIER)
                pass
            elif token in [MT22Parser.LCB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 151
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_oneContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def variable_type_without_void(self):
            return self.getTypedRuleContext(MT22Parser.Variable_type_without_voidContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_one

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_one" ):
                return visitor.visitParameter_one(self)
            else:
                return visitor.visitChildren(self)




    def parameter_one(self):

        localctx = MT22Parser.Parameter_oneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter_one)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.state = 153
                self.match(MT22Parser.INHERIT)
                pass
            elif token in [MT22Parser.OUT, MT22Parser.IDENTIFIER]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT]:
                self.state = 157
                self.match(MT22Parser.OUT)
                pass
            elif token in [MT22Parser.IDENTIFIER]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 161
            self.match(MT22Parser.IDENTIFIER)
            self.state = 162
            self.match(MT22Parser.COLON)
            self.state = 163
            self.variable_type_without_void()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nullable_parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_one(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_oneContext,0)


        def parameter_list_body(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_list_bodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_nullable_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullable_parameter_list" ):
                return visitor.visitNullable_parameter_list(self)
            else:
                return visitor.visitChildren(self)




    def nullable_parameter_list(self):

        localctx = MT22Parser.Nullable_parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nullable_parameter_list)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.parameter_one()
                self.state = 166
                self.parameter_list_body()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_one(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_oneContext,0)


        def parameter_list_body(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_list_bodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = MT22Parser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_list)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.parameter_one()
                self.state = 172
                self.parameter_list_body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.parameter_one()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_list_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def parameter_one(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_oneContext,0)


        def parameter_list_body(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_list_bodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_list_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list_body" ):
                return visitor.visitParameter_list_body(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list_body(self):

        localctx = MT22Parser.Parameter_list_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_list_body)
        try:
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.match(MT22Parser.COMMA)
                self.state = 178
                self.parameter_one()
                self.state = 179
                self.parameter_list_body()
                pass
            elif token in [MT22Parser.EOF, MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def index_operation(self):
            return self.getTypedRuleContext(MT22Parser.Index_operationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_assign_statement

